# eag-v3

./: .env.example  .gitignore  AGENTS.md  README.md  action.py  agent6.py  api_handler.js  artifacts.py  background.js  config.example.js  config.py  config.template.js  content.js  decision.py  llm_client.py  manifest.json  mcp_runtime.py  mcp_server.py  memory.py  orbital_mcp_server.py  perception.py  popup.css  popup_info.html  pyproject.toml  requirements.txt  run_mcp_inspector.ps1  run_mcp_inspector_http.ps1  schemas.py  styles.css
.github/instructions/: OrbitalPromptValidation.instructions.md
CrisisFlow/: .env.example  .gitignore  README.md  package-lock.json  package.json
CrisisFlow/data/: crisis_vault.json  watchlist.json
CrisisFlow/public/: app.js  index.html  prefab-app.js  prefab-renderers.js  prefab-state.js  styles.css
CrisisFlow/src/: index.ts  mcp.ts  mcpServer.ts  types.ts  webServer.ts
CrisisFlow/src/services/: auditLogger.ts  (+6 more)
DemoLogs/: orbital_predictor_mcp.txt
PromptValidation/: UserPromptValidation.md
Scholar's Walkman Extension/: .gitignore  README.md  background.js  content.css  manifest.json  popup.html  popup.js
backend/: .env.template  .gitignore  START_SERVER.bat  START_SERVER.sh  main.py  requirements.txt
extension/: .gitignore  manifest.json
extension/src/: extension-config.template.js  popup.html  side_panel.html
pop/: decision_prompt.txt  decision_validation.json  perception_prompt.txt  perception_validation.json
queries/: __init__.py  models.py  query_a_shannon.py  query_b_tokyo.py  query_c_mom.py  query_d_asyncio.py
(+13 files in other folders)
