[project]
name = "agentic-architecture-session6"
version = "0.1.0"
description = "Session 6 style agentic architecture with Memory, Perception, Decision, and Action roles"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.8.0",
    "pydantic-settings>=2.3.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
    "mcp>=1.9.0",
    "ddgs>=9.0.0",
    "crawl4ai>=0.5.0",
    "tavily-python>=0.5.0",
]

[tool.uv]
package = false
